--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
     }
   },
   "dependencies": {
-    "babel-plugin-react-transform": "2.0.2",
-    "babel-plugin-typecheck": "3.8.0",
     "babel-polyfill": "6.7.4",
     "body-parser": "1.13.3",
     "classnames": "2.2.3",
@@ -69,6 +67,7 @@
   "devDependencies": {
     "assets-webpack-plugin": "3.3.0",
     "autoprefixer": "6.3.3",
+    "babel-core": "^6.26.0",
     "babel-loader": "6.2.4",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-check-es2015-constants": "^6.7.2",
@@ -97,6 +96,7 @@
     "isomorphic-style-loader": "0.0.12",
     "less-loader": "2.2.2",
     "mockjs": "1.0.1-beta1",
+    "node-dev": "^3.1.3",
     "postcss-loader": "0.8.2",
     "precss": "1.4.0",
     "react-transform-catch-errors": "^1.0.2",
@@ -106,9 +106,5 @@
     "url-loader": "0.5.7",
     "webpack-dev-middleware": "1.5.1",
     "webpack-hot-middleware": "2.9.1"
-  },
-  "peerDependencies": {
-    "less": "2.6.1",
-    "webpack": "1.12.14"
   }
 }
