--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new_framework",
+  "name": "LCloud",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -64,6 +64,7 @@
     "webpack-isomorphic-tools": "2.2.41"
   },
   "devDependencies": {
+    "antd": "^2.13.0",
     "assets-webpack-plugin": "3.3.0",
     "autoprefixer": "6.3.3",
     "babel-core": "^6.26.0",
