--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "expose-loader": "0.7.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
+    "file-stream-rotator": "^0.2.0",
     "force-case-sensitivity-webpack-plugin": "0.1.1",
     "html-webpack-plugin": "2.9.0",
     "http-proxy-middleware": "0.9.1",
